Make `MemoizeConstantVisitorStateLookups` suggest `typeFromString`.
Demo of (tweaked) output on Error Prone itself: unknown commit

Also, IntelliJ suggested that I make `CallSite` into a `record`, so I went for it :)

PiperOrigin-RevId: 913668052